# scotty-auth

./: LICENSE  scotty-auth.cabal
src/Web/Scotty/: Auth.hs
src/Web/Scotty/Auth/: Instances.hs  Types.hs
