name:                scotty-auth
version:             0.1.2
synopsis:            AES token auth for scotty
description:         Please see README.md
homepage:            http://github.com/Feeniks/scotty-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           Ralph Morton 2015
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Scotty.Auth.Types, Web.Scotty.Auth.Instances, Web.Scotty.Auth
  build-depends:       base >= 4.7 && < 5 
                     , mtl >= 2.1.3.1 
                     , time >= 1.4.2
                     , bytestring >= 0.10.4.0
                     , text >= 1.2.0
                     , base16-bytestring >= 0.1.1.6
                     , word8 >= 0.1.2
                     , aeson >= 0.8.0.2 
                     , cipher-aes >= 0.2.10 
                     , scotty >= 0.9.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Feeniks/scotty-auth
